[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.39"
log = "0.4"
rand = "0.8"

[dev-dependencies]
env_logger = "0.10"
proptest = "1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bitvec]
version = "1.0"
default-features = false
features = ["alloc", "atomic"]

